# financial-news-scraper

./: .ghc.environment.x86_64-darwin-8.4.2  .gitignore  Dockerfile  Procfile  README.md  default.nix  financial-news-scraper.cabal  shell.nix  stack.yaml
app/: Main.hs
config/: postgresql.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.2.2/: financial-news-scraper-0.1.0.0-inplace.conf  package.cache
src/DB/: Model.hs
src/Text/HTML/: Freader.hs  Fscraper.hs
