name:                financial-news-scraper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/v0d1ch/financial-news-scraper#readme
license:             BSD3
author:              Sasa Bogicevic
maintainer:          brutallesale@gmail.com
copyright:           2017 Sasa Bogicevic
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.HTML.Fscraper
                     , Text.HTML.Freader
                     , DB.Model
  build-depends:       base
                     , webdriver
                     , text
                     , scalpel
                     , xml-conduit
                     , curl
                     , http-client
                     , mtl
                     , http-client-tls
                     , bytestring
                     , safe-exceptions
                     , regex-pcre-builtin
                     , safe-exceptions
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , time
                     , aeson
                     , safe-exceptions
                     , transformers
                     , monad-control
                     , generic-deriving
                     , monad-logger
                     , unliftio-core
                     , unordered-containers
                     , yaml

  ghc-options: -Wall -fwarn-tabs -fwarn-unused-imports -O0
  default-language:    Haskell2010

executable financial-news-scraper
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall -O2
  build-depends:       base
                     , webdriver
                     , text
                     , scalpel
                     , xml-conduit
                     , curl
                     , http-client
                     , mtl
                     , http-client-tls
                     , bytestring
                     , safe-exceptions
                     , regex-pcre-builtin
                     , safe-exceptions
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , time
                     , aeson
                     , safe-exceptions
                     , transformers
                     , monad-control
                     , generic-deriving
                     , monad-logger
                     , unliftio-core
                     , unordered-containers
                     , yaml

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/v0d1ch/financial-news-scraper
